--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             }
         }
     </script>
-    <svg class="menu" viewBox="0 0 100 80" width="40" height="40" fill="#C2A859" onclick="nav()">
+    <svg class="menu" viewBox="0 0 100 80" width="40" height="40" fill="#8C4055" onclick="nav()">
         <rect width="100" height="20"></rect>
         <rect y="30" width="100" height="20"></rect>
         <rect y="60" width="100" height="20"></rect>
@@ -44,15 +44,15 @@
 </header>
 <!--main-->
 <section class="main">
-    <h1>Welcome to our website</h1>
-    <button class="button"> 
+    <h1>Welcome to RentCar</h1>
+   <a href="reservation.html"> <button class="button" > 
 Reserve now
-    </button>
+    </button></a>
 </section>
  
 <section id="customers" class="customers" style="text-align: center;">
     <h2 class="title">What our Customers says</h2>
-    <p>Making a reservation , is easy and takes just a couple of minutes.</p>
+    <br>
 
 
     <div class="grp-msgs">
@@ -65,11 +65,11 @@ Reserve now
                 <div class="line-center"></div>
             </div>
             <div class="grp-icons" style="margin-top: 10px;">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star" ></i>
-                <i class="fas fa-star" ></i>
-                <i class="fas fa-star" ></i>
+                <i class="fas fa-star" style="margin-right: 5px;color: yellow;"></i>
+                <i class="fas fa-star" style="margin-right: 5px;color: yellow;"></i>
+                <i class="fas fa-star" style="margin-right: 5px;color: yellow;"></i>
+                <i class="fas fa-star" style="margin-right: 5px;color: black;"></i>
+                <i class="fas fa-star" style="margin-right: 5px;color: black;"></i>
             </div>
         </div>
         <div class="box">
